tests/e2e/gateway-autoscaling/00-install.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg-autoscaling-test
spec:
  version: "11.2.1"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.2.1
    imagePullPolicy: IfNotPresent
    management:
      cluster:
        hostname: gateway.brcmlabs.com
    autoscaling:
      enabled: true
      hpa:
        minReplicas: 1
        maxReplicas: 3
        metrics:
          - type: Resource
            resource:
              name: cpu
              target:
                type: Utilization
                averageUtilization: 60
        behavior:
          scaleDown:
            stabilizationWindowSeconds: 300
            policies:
              - type: Pods
                value: 1
                periodSeconds: 60
          scaleUp:
            stabilizationWindowSeconds: 0
            policies:
              - type: Percent
                value: 100
                periodSeconds: 15
    resources:
      requests: {}
      limits: {}
    java:
      jvmHeap:
        calculate: true
        percentage: 50
        default: 2g
      extraArgs:
        - -Dcom.l7tech.bootstrap.autoTrustSslKey=trustAnchor,TrustedFor.SSL,TrustedFor.SAML_ISSUER
        - -Dcom.l7tech.server.audit.message.saveToInternal=false
        - -Dcom.l7tech.server.audit.admin.saveToInternal=false
        - -Dcom.l7tech.server.audit.system.saveToInternal=false
        - -Dcom.l7tech.server.audit.log.format=json
        - -Djava.util.logging.config.file=/opt/SecureSpan/Gateway/node/default/etc/conf/log-override.properties
        - -Dcom.l7tech.server.pkix.useDefaultTrustAnchors=true
        - -Dcom.l7tech.security.ssl.hostAllowWildcard=true
    listenPorts:
      harden: true
      custom:
        enabled: false
      ports: []
    service:
      # annotations:
      type: LoadBalancer
      ports:
        - name: https
          port: 8443
          targetPort: 8443
          protocol: TCP
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP
