tests/e2e/gateway-autoscaling/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 150
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg
status:
  replicas: 1
  readyReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: ssg
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: ssg
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: ssg
  minReplicas: 1
  maxReplicas: 3
  behavior:
    scaleDown:
      stabilizationWindowSeconds: 300
      policies:
        - type: Pods
          value: 1
          periodSeconds: 60
    scaleUp:
      stabilizationWindowSeconds: 0
      policies:
        - type: Percent
          value: 100
          periodSeconds: 15
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 60
